git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@305 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -732,7 +732,7 @@ app:
     entities_search:
       search: Rechercher une relation
     entities_update:
-      title: 'Modification de la fiche'
+      title: 'Modification de la fiche : %s'
     entities_form:
       title: 'Renseignez les différentes caractéristiques de la fiche'
     index:
